# project-euler

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  _config.yml  appveyor.yml  default.sh  dockerize.sh  index.html
src/python/: .gitignore  Makefile  README.md  project_euler.py  pyproject.toml
src/python/1-25/: problem_10.py  problem_11.py  problem_12.py  problem_14.py  problem_17.py  problem_18.py  problem_20.py  problem_21.py  problem_22.py  problem_23.py  problem_5.py  problem_8.py  problem_9.py
src/python/26-50/: problem_26.py  problem_27.py  problem_28.py
src/python/project_euler/1-25/: problem_11.py  problem_12.py  problem_13.py  problem_16.py  problem_19.py  problem_25.py  problem_5.py  problem_7.py  problem_9.py
src/python/project_euler/26-50/: problem_27.py  problem_29.py  problem_30.py  problem_31.py
src/python/src/project_euler/: project_euler.py
src/python/src/project_euler/first/: problem_1.py  problem_10.py  problem_11.py  problem_12.py  problem_13.py  problem_14.py  problem_15.py  problem_18.py  problem_2.py  problem_21.py  problem_23.py  problem_24.py  problem_3.py  problem_4.py  problem_5.py  problem_6.py  problem_8.py  problem_9.py
src/python/src/project_euler/second/: problem_27.py  (+5 more)
src/python/tests/: test_project_euler.py
src/python/tests/first/: test_problem_1.py  test_problem_10.py  test_problem_11.py  test_problem_12.py  test_problem_13.py  test_problem_14.py  test_problem_2.py  test_problem_3.py  test_problem_4.py  test_problem_5.py  test_problem_6.py
src/python/tests/second/: test_problem_30.py  test_problem_31.py  test_problem_32.py  test_problem_35.py  test_project_euler.py
(+348 files in other folders)
