[project]
name = "project_euler"
version = "0.1.0"
description = ""
authors = [
    {name = "Fazendaaa",email = "lucas.carotta@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<=4.0"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
mypy = "1.15"
pytest = "^8.3.5"
radon = "5.1"
pytest-profiling = "^1.8.1"
pytest-cov = "^6.2.1"
snakeviz = "^2.2.2"
memray = "1.10.0"
pytest-memray = "1.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-ra", "-q", "-p", "profiling"]
pythonpath = "./src"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["src"]